# EducationPlatform

./: .gitignore  AGENTS.md  package-lock.json
answer_service/: .coveragerc  .dockerignore  .env.dev  .gitignore  .importlinter  .pre-commit-config.yaml  CLAUDE.md  LICENSE  QWEN.md  README.md  alembic.ini  docker-compose.dev.yaml  justfile  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
answer_service/.claude/commands/: check.md  new-command.md  new-domain-event.md  new-query.md
answer_service/.qwen/skills/: SKILL.md  pytest.md
answer_service/deploy/dev/postgres/: pg_hba.conf  postgresql.conf
answer_service/deploy/dev/redis/: redis_entrypoint.sh
answer_service/deploy/prod/answer_service/: Dockerfile  api_entrypoint.sh  broker_entrypoint.sh  scheduler_entrypoint.sh  worker_entrypoint.sh
answer_service/src/answer_service/: fastapi_app.py  faststream_app.py  scheduler.py  worker.py
answer_service/src/answer_service/application/: errors.py
answer_service/src/answer_service/application/commands/conversation/: ask_question.py  close_conversation.py  create_conversation.py
answer_service/src/answer_service/application/commands/inbox/: check_inbox.py
answer_service/src/answer_service/application/commands/lesson_index/: index_lesson.py  reindex_lesson.py  schedule_index_lesson.py  schedule_reindex_lesson.py
answer_service/src/answer_service/application/commands/outbox/: relay_outbox.py
answer_service/src/answer_service/application/commands/user/: create_user.py  delete_user.py  register_user.py
answer_service/src/answer_service/application/common/: inbox_message.py  outbox_message.py
answer_service/src/answer_service/application/common/ports/: conversation_repository.py  embedding_port.py  event_bus.py  event_serializer.py  inbox_repository.py  lesson_index_repository.py  llm_port.py  outbox_publisher.py  outbox_repository.py  transaction_manager.py  user_repository.py  vector_search_port.py
answer_service/src/answer_service/application/common/query_params/: conversation_params.py  pagination.py  user_params.py
answer_service/src/answer_service/application/common/views/: conversation_views.py  lesson_index_views.py  user_views.py
answer_service/src/answer_service/application/queries/conversation/: get_conversation.py  get_conversations.py
answer_service/src/answer_service/domain/common/: aggregate.py  entity.py  errors.py  event_id.py  events.py  events_collection.py  service.py  value_object.py
answer_service/src/answer_service/domain/conversation/: errors.py  events.py
answer_service/src/answer_service/domain/lesson_index/: errors.py  events.py
answer_service/src/answer_service/domain/user/: errors.py  events.py
answer_service/src/answer_service/infrastructure/: errors.py
answer_service/src/answer_service/infrastructure/cache/: __init__.py  cache_store.py  provider.py  redis_cache_store.py
answer_service/src/answer_service/infrastructure/mappers/: event_serializer.py  llm_mapper.py  vector_search_mapper.py
answer_service/src/answer_service/infrastructure/outbox/: event_serializer.py  sqlalchemy_outbox_repository.py
answer_service/src/answer_service/infrastructure/persistence/: chroma_provider.py  provider.py
answer_service/src/answer_service/infrastructure/scheduler/: task_iq_scheduler.py
answer_service/src/answer_service/setup/: bootstrap.py  ioc.py
answer_service/src/answer_service/setup/configs/: app_config.py  asgi_config.py  broker_config.py  chroma_config.py  consts.py  database_config.py  llm_config.py  logging_config.py  redis_config.py  taskiq_config.py
answer_service/tests/integration/: conftest.py  ioc.py
answer_service/tests/integration/outbox/: conftest.py  test_outbox_publisher.py  test_outbox_repository.py  test_relay_outbox.py
answer_service/tests/integration/rabbitmq/v1/: conftest.py
answer_service/tests/integration/scheduler/: conftest.py  test_lesson_index_tasks.py
answer_service/tests/unit/: conftest.py
answer_service/tests/unit/application/: conftest.py
answer_service/tests/unit/domain/common/: __init__.py  test_value_object.py
answer_service/tests/unit/domain/conversation/: __init__.py
answer_service/tests/unit/domain/lesson_index/: __init__.py
answer_service/tests/unit/domain/user/: __init__.py
answer_service/tests/unit/factories/: entities.py
answer_service/tests/unit/infrastructure/mappers/: test_event_serializer.py
answer_service/tests/unit/setup/: __init__.py  test_bootstrap.py  test_database_provider.py  test_ioc.py  test_lifespans.py
answer_service/tests/unit/setup/configs/: __init__.py  test_asgi_config.py  test_broker_config.py  test_chroma_config.py  test_database_config.py  test_llm_config.py
(+330 files in other folders)
